<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="com.simonzc3.sesion1layouts.MainActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">


            <!--comentario multilinea-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"

                    android:text="@string/Login"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"

                    />

                <EditText
                    android:inputType="textPersonName"
                    android:id="@+id/eNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/eusuario" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"

                    android:text="@string/Password"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            <EditText
                android:id="@+id/eApellido"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"

                android:text="@string/cpassword"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"

                />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/eConfirmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                 />
        </LinearLayout>
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/correo"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rMasculino"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Masculino"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/rFemenino"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Femenino"
            android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/nacimiento"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:onClick="showDatePickerDialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ciudad"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sCiudad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <CheckBox android:id="@+id/cComer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/comer"
                    />
                <CheckBox android:id="@+id/cDormir"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/dormir"
                    />
                <CheckBox android:id="@+id/cDeporte"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/Deporte"
                    />
                <CheckBox android:id="@+id/cCine"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cine"
                    />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/indigo"
                android:onClick="Registrar"
                android:text="@string/registrar"
                android:textColor="@color/gainsboro"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>






